vendor/structopt-0.3.21/tests/ui/subcommand_and_flatten.stderr
error: subcommand, flatten and skip cannot be used together
  --> $DIR/subcommand_and_flatten.rs:17:29
   |
17 |     #[structopt(subcommand, flatten)]
   |                             ^^^^^^^
